--- a/components/postList.module.css
+++ b/components/postList.module.css
@@ -2,9 +2,5 @@
 	display: flex;
 	flex-direction: column;
 	gap: var(--size-l);
-	padding: var(--size-l);
-	/* Debug */
-	border: 1px solid blue;
-	width: 100%;
-	max-width: 600px;
+	padding: var(--size-l) 0;
 }
