--- a/styles/global/index.css
+++ b/styles/global/index.css
@@ -12,6 +12,43 @@ button {
 	all: unset;
 	display: block;
 	cursor: pointer;
+	height: var(--size-xxl);
+	padding: 0 var(--size-l);
+	background: var(--color-level-2);
+	border-radius: var(--border-radius);
+	border: 1px solid var(--color-border);
+}
+
+button:disabled {
+	background: var(--color-level-1);
+	color: var(--color-text-disabled);
+	pointer-events: none;
+}
+
+input,
+textarea {
+	all: unset;
+	background-color: var(--color-level-2);
+	border: 1px solid var(--color-border);
+	padding: var(--size-s);
+}
+
+input:disabled::placeholder,
+input:disabled,
+textarea:disabled::placeholder,
+textarea:disabled {
+	background-color: var(--color-level-1);
+	color: var(--color-text-disabled);
+}
+
+
+
+button:hover {
+	background: var(--color-level-3);
+}
+
+button:focus-visible {
+	background: var(--color-level-4);
 }
 
 a {
